[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/digital_big.tres" type="DynamicFont" id=1]
[ext_resource path="res://levels/demo/FinalScore.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/main_menu_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/sounds/digital_typing_long.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Margin/VBoxContainer/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Margin/VBoxContainer/Label2:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Margin/VBoxContainer/VBoxContainer/Label:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Margin/VBoxContainer/VBoxContainer2/Label:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Margin/VBoxContainer/VBoxContainer2/NameEdit:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Margin/VBoxContainer/Submit:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Margin/VBoxContainer/VBoxContainer/Score:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Margin:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hide"
length = 0.6
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ NodePath("ColorRect") ],
"method": "hide_rect"
}, {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Margin:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 8.0
tracks/0/type = "audio"
tracks/0/path = NodePath("Sound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.44,
"start_offset": 0.0,
"stream": ExtResource( 4 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
}, {
"end_offset": 0.44,
"start_offset": 0.0,
"stream": ExtResource( 4 )
}, {
"end_offset": 0.44,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.5, 1.3, 2.8, 6 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Margin/VBoxContainer/Label:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Margin/VBoxContainer/Label2:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.3, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Margin/VBoxContainer/VBoxContainer/Label:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2.9, 3.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ NodePath("ColorRect") ],
"method": "show_rect"
}, {
"args": [ NodePath("Margin/VBoxContainer/VBoxContainer/Score") ],
"method": "animate_number"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Margin/VBoxContainer/VBoxContainer2/Label:percent_visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 6, 6.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Margin/VBoxContainer/VBoxContainer2/NameEdit:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 6.6, 6.9 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Margin/VBoxContainer/Submit:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 6.9, 7.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Margin/VBoxContainer/VBoxContainer/Score:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 3.5, 3.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="FinalScore" type="CanvasLayer"]
layer = 6
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/hide = SubResource( 3 )
anims/show = SubResource( 2 )

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 1920, 0 )
color = Color( 0.0627451, 0.0705882, 0.0980392, 1 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1820.0
margin_bottom = 980.0
custom_constants/separation = 100
alignment = 1

[node name="Label" type="Label" parent="Margin/VBoxContainer"]
margin_top = 15.0
margin_right = 1720.0
margin_bottom = 60.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
text = "Congratulations!"
align = 1
percent_visible = 0.0

[node name="Label2" type="Label" parent="Margin/VBoxContainer"]
margin_top = 160.0
margin_right = 1720.0
margin_bottom = 200.0
text = "You have completed this game demo."
align = 1
percent_visible = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/VBoxContainer"]
margin_top = 300.0
margin_right = 1720.0
margin_bottom = 405.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="Margin/VBoxContainer/VBoxContainer"]
margin_right = 1720.0
margin_bottom = 40.0
text = "Total score"
align = 1
percent_visible = 0.0

[node name="Score" type="Label" parent="Margin/VBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 60.0
margin_right = 1720.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 1 )
text = "9999"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Margin/VBoxContainer"]
margin_top = 505.0
margin_right = 1720.0
margin_bottom = 665.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="Margin/VBoxContainer/VBoxContainer2"]
margin_right = 1720.0
margin_bottom = 40.0
text = "Player name"
align = 1
percent_visible = 0.0

[node name="NameEdit" type="LineEdit" parent="Margin/VBoxContainer/VBoxContainer2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 610.0
margin_top = 60.0
margin_right = 1110.0
margin_bottom = 160.0
rect_min_size = Vector2( 500, 100 )
size_flags_horizontal = 4
align = 1
max_length = 15
placeholder_text = "Please enter a name"
caret_blink = true
caret_blink_speed = 0.5

[node name="Submit" type="Button" parent="Margin/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 710.0
margin_top = 765.0
margin_right = 1010.0
margin_bottom = 865.0
rect_min_size = Vector2( 300, 100 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
disabled = true
text = "Submit"

[connection signal="text_changed" from="Margin/VBoxContainer/VBoxContainer2/NameEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="button_up" from="Margin/VBoxContainer/Submit" to="." method="_on_Submit_button_up"]
